Compiled a menu and block New Arrivals

--- a/index.html
+++ b/index.html
@@ -118,10 +118,10 @@
             </a>
           </div>
           <div class="shoes-collection">
-            <a href="#">
+            <a class="shoes-collection-link" href="#">
               <h3 class="shoes-collection-title">Shoes collection</h3>
               <p>new item's</p>
-              <p>We are delighted to reveal our campaign for the Autumn/Winter 2017 collection, styled by fashion icon Caroline Issa and shot by esteemed photographer www.minsoi.com...</p>
+              <p>We are delighted to reveal our campaign for the Autumn/Winter 2017 collection, styled by<br> fashion icon Caroline Issa and shot by esteemed photographer www.minsoi.com...</p>
               <p class="open-more">Shopping now</p>
             </a>
           </div>
