The beginning of the development of the block Feauture Product

--- a/index.html
+++ b/index.html
@@ -128,10 +128,13 @@
         </section>
 
         <section class="feauture-product">
-          <h2 class="block-title"><span class="border">Feau</span>ture Product</h2>
-          <ul class="">
+          <div class="block-for-title">
+            <h2 class="block-title"><span class="underline">Feau</span>ture Product</h2>
+            <a href="#"><span class="small-title">All Product</span></a>
+          </div>
+          <ul class="feauture-product-list">
             <li>
-              <a href="#">
+              <a class="item-1" href="#">
                 <h3 class="product-name">Abominable Hoodie</h3>
                 <p class="product-price">$40.00</p>
               </a>
