--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
             <span>|</span>
             <p>min101092@gmail.com</p>
           </div>
-          <form class="header-choice">
+          <div class="header-choice">
             <label for="language-choice">language:</label>
             <select name="language" id="language-choice">
-              <option checked><a href="mstore-home-page.html">ENG</a></option>
-              <option><a href="#">RUS</a></option>
+              <option selected>ENG</option>
+              <option>RUS</option>
             </select>
             <span>|</span>
             <label for="currency-choice">currency:</label>
             <select name="currency" id="currency-choice">
-              <option>USD</option>
+              <option selected>USD</option>
               <option>EUR</option>
             </select>
-          </form>
+          </div>
         </div>
       </div>
 
@@ -105,7 +105,7 @@
               <p class="arrivals red">New arrivals</p>
               <p class="price red">$99.00</p>
               <p class="short-description right">Refresh your wardrobe with a<br> piece from our gorgeous ready-to-wear collection, featuring beautifully crafted coats, dresses, jackets, sweaters, skirts, tops and trousers.<br> Whether you’re searching for a special occasion...</p>
-              <a href="#" class="open-more">Shopping now</a>
+              <p class="open-more">Shopping now</p>
             </a>
           </div>
           <div class="new-arrival-right arrival-wrapper">
@@ -238,7 +238,7 @@
        </div>
 
       <section class="blog">
-        <h2 block-title>Blog Post’s</h2>
+        <h2 class="block-title">Blog Post’s</h2>
         <ul>
           <li></li>
           <li></li>
