--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@
   <main>
       <div class="ad-top">
         <div class="wrapper-center ad-center">
-          <div class="ad-top-text">
+          <a href="#" class="ad-top-text">
             <p>We make it easy to exprience creativity</p>
             <p>Stylish<br> new<br> design.</p>
             <p>Order online and have your products delivered to your closest store for free...</p>
-            <a href="#" class="open-more">Shopping now</a> 
-          </div>
+            <p class="open-more">Shopping now</p> 
+          </a>
         </div>  
       </div>
     
@@ -134,52 +134,156 @@
           </div>
           <ul class="feauture-product-list">
             <li>
-              <a class="item-1" href="#">
-                <h3 class="product-name">Abominable Hoodie</h3>
-                <p class="product-price">$40.00</p>
-              </a>
+              <div class="items item-1" href="#2">
+                <div class="pop-up">
+                  <button class="shopping-cart-card-btn" type="button">
+                    <img src="img/Shopping_cart_btn.png" alt="shopping cart">
+                  </button>
+                  <button class="wishlist-card-btn" type="button">
+                    <img src="img/wishlist_btn.png" alt="wishlist">
+                  </button>
+                  <button class="zoom-card-btn" type="button">
+                    <img src="img/zoom-btn.png" alt="zoom photo">
+                  </button>
+                </div>
+                <a href="#1">
+                  <h3 class="product-name">Abominable Hoodie</h3>
+                  <p class="product-price">$40.00</p> 
+                </a>
+              </div>
             </li>
             <li>
-              <a href="#">
-                <h3 class="product-name">Hollister Backyard Sweatshirt</h3>
-                <p class="product-price">$29.00</p>
-              </a>
+              <div class="items item-2">
+                <div class="pop-up">
+                  <button class="shopping-cart-card-btn" type="button">
+                    <img src="img/Shopping_cart_btn.png" alt="shopping cart">
+                  </button>
+                  <button class="wishlist-card-btn" type="button">
+                    <img src="img/wishlist_btn.png" alt="wishlist">
+                  </button>
+                  <button class="zoom-card-btn" type="button">
+                    <img src="img/zoom-btn.png" alt="zoom photo">
+                  </button>
+                </div>
+                <a href="#2">
+                  <h3 class="product-name">Hollister Backyard Sweatshirt</h3>
+                  <p class="product-price">$29.00</p>
+                </a>
+              </div>
             </li>
             <li>
-              <a href="#">
-                <h3 class="product-name">Oslo Trek Hoodie</h3>
-                <p class="product-price">$29.00</p>
-              </a>
+              <div class="items item-3" href="#">
+                <div class="pop-up">
+                  <button class="shopping-cart-card-btn" type="button">
+                    <img src="img/Shopping_cart_btn.png" alt="shopping cart">
+                  </button>
+                  <button class="wishlist-card-btn" type="button">
+                    <img src="img/wishlist_btn.png" alt="wishlist">
+                  </button>
+                  <button class="zoom-card-btn" type="button">
+                    <img src="img/zoom-btn.png" alt="zoom photo">
+                  </button>
+                </div>
+                <a href="#3">
+                  <h3 class="product-name">Oslo Trek Hoodie</h3>
+                  <p class="product-price">$29.00</p>
+                </a>
+              </div>
             </li>
             <li>
-              <a href="#">
-                <h3 class="product-name">Mach Street Sweatshirt</h3>
-                <p class="product-price">$40.00</p>
-              </a>
+              <div class="items item-4" href="#">
+                <div class="pop-up">
+                  <button class="shopping-cart-card-btn" type="button">
+                    <img src="img/Shopping_cart_btn.png" alt="shopping cart">
+                  </button>
+                  <button class="wishlist-card-btn" type="button">
+                    <img src="img/wishlist_btn.png" alt="wishlist">
+                  </button>
+                  <button class="zoom-card-btn" type="button">
+                    <img src="img/zoom-btn.png" alt="zoom photo">
+                  </button>
+                </div>
+                <a href="#4">
+                  <h3 class="product-name">Mach Street Sweatshirt</h3>
+                  <p class="product-price">$40.00</p>
+                </a>
+              </div>
             </li>
             <li>
-              <a href="#">
-                <h3 class="product-name">Backyard Sweat Shirt</h3>
-                <p class="product-price">$40.00 <del>$60.00</del></p>
-              </a>
+              <div class="items item-5" href="#">
+                <div class="pop-up">
+                  <button class="shopping-cart-card-btn" type="button">
+                    <img src="img/Shopping_cart_btn.png" alt="shopping cart">
+                  </button>
+                  <button class="wishlist-card-btn" type="button">
+                    <img src="img/wishlist_btn.png" alt="wishlist">
+                  </button>
+                  <button class="zoom-card-btn" type="button">
+                    <img src="img/zoom-btn.png" alt="zoom photo">
+                  </button>
+                </div>
+                <a href="#5">
+                  <h3 class="product-name">Backyard Sweat Shirt</h3>
+                  <p class="product-price">$40.00 <del>$60.00</del></p>
+                </a>
+              </div>
             </li>
             <li>
-              <a href="#">
-                <h3 class="product-name">Faded Short Sleeves</h3>
-                <p class="product-price">$110.00</p>
-              </a>
+              <div class="items item-6" href="#">
+                <div class="pop-up">
+                  <button class="shopping-cart-card-btn" type="button">
+                    <img src="img/Shopping_cart_btn.png" alt="shopping cart">
+                  </button>
+                  <button class="wishlist-card-btn" type="button">
+                    <img src="img/wishlist_btn.png" alt="wishlist">
+                  </button>
+                  <button class="zoom-card-btn" type="button">
+                    <img src="img/zoom-btn.png" alt="zoom photo">
+                  </button>
+                </div>
+                <a href="#6">
+                  <h3 class="product-name">Faded Short Sleeves</h3>
+                  <p class="product-price">$110.00</p>
+                </a>
+              </div>
             </li>
             <li>
-              <a href="#">
-                <h3 class="product-name">Oslo Trek Hoodie</h3>
-                <p class="product-price">$80.00</p>
-              </a>
+              <div class="items item-7" href="#">
+                <div class="pop-up">
+                  <button class="shopping-cart-card-btn" type="button">
+                    <img src="img/Shopping_cart_btn.png" alt="shopping cart">
+                  </button>
+                  <button class="wishlist-card-btn" type="button">
+                    <img src="img/wishlist_btn.png" alt="wishlist">
+                  </button>
+                  <button class="zoom-card-btn" type="button">
+                    <img src="img/zoom-btn.png" alt="zoom photo">
+                  </button>
+                </div>
+                <a href="#7">
+                  <h3 class="product-name">Oslo Trek Hoodie</h3>
+                  <p class="product-price">$80.00</p>
+                </a>
+              </div>
             </li>
             <li>
-              <a href="#">
-                <h3 class="product-name">Leather Sneakers</h3>
-                <p class="product-price">$80.00</p>
-              </a>
+              <div class="items item-8" href="#">
+                <div class="pop-up">
+                  <button class="shopping-cart-card-btn" type="button">
+                    <img src="img/Shopping_cart_btn.png" alt="shopping cart">
+                  </button>
+                  <button class="wishlist-card-btn" type="button">
+                    <img src="img/wishlist_btn.png" alt="wishlist">
+                  </button>
+                  <button class="zoom-card-btn" type="button">
+                    <img src="img/zoom-btn.png" alt="zoom photo">
+                  </button>
+                </div>
+                <a href="#8">
+                  <h3 class="product-name">Leather Sneakers</h3>
+                  <p class="product-price">$80.00</p>
+                </a>
+              </div>
             </li>
           </ul>
         </section>
