Corrected href in divs

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
           </div>
           <ul class="feauture-product-list">
             <li>
-              <div class="items item-1" href="#2">
+              <div class="items item-1"s>
                 <div class="pop-up">
                   <button class="shopping-cart-card-btn" type="button">
                     <img src="img/Shopping_cart_btn.png" alt="shopping cart">
@@ -172,7 +172,7 @@
               </div>
             </li>
             <li>
-              <div class="items item-3" href="#">
+              <div class="items item-3">
                 <div class="pop-up">
                   <button class="shopping-cart-card-btn" type="button">
                     <img src="img/Shopping_cart_btn.png" alt="shopping cart">
@@ -191,7 +191,7 @@
               </div>
             </li>
             <li>
-              <div class="items item-4" href="#">
+              <div class="items item-4">
                 <div class="pop-up">
                   <button class="shopping-cart-card-btn" type="button">
                     <img src="img/Shopping_cart_btn.png" alt="shopping cart">
@@ -210,7 +210,7 @@
               </div>
             </li>
             <li>
-              <div class="items item-5" href="#">
+              <div class="items item-5">
                 <div class="pop-up">
                   <button class="shopping-cart-card-btn" type="button">
                     <img src="img/Shopping_cart_btn.png" alt="shopping cart">
@@ -229,7 +229,7 @@
               </div>
             </li>
             <li>
-              <div class="items item-6" href="#">
+              <div class="items item-6">
                 <div class="pop-up">
                   <button class="shopping-cart-card-btn" type="button">
                     <img src="img/Shopping_cart_btn.png" alt="shopping cart">
@@ -248,7 +248,7 @@
               </div>
             </li>
             <li>
-              <div class="items item-7" href="#">
+              <div class="items item-7">
                 <div class="pop-up">
                   <button class="shopping-cart-card-btn" type="button">
                     <img src="img/Shopping_cart_btn.png" alt="shopping cart">
@@ -267,7 +267,7 @@
               </div>
             </li>
             <li>
-              <div class="items item-8" href="#">
+              <div class="items item-8">
                 <div class="pop-up">
                   <button class="shopping-cart-card-btn" type="button">
                     <img src="img/Shopping_cart_btn.png" alt="shopping cart">
