Правка ваппера, доработка блока Feauture Product

--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
                     <img src="img/zoom-btn.png" alt="zoom photo">
                   </button>
                 </div>
-                <a href="#8">
+                <a class="poduct-link" href="#8">
                   <h3 class="product-name">Leather Sneakers</h3>
                   <p class="product-price">$80.00</p>
                 </a>
@@ -289,12 +289,12 @@
         </section>
 
         <div class="ad-bottom">
-          <a href="#">
-            <p>SPORT SHOES COLLECTION</p>
-            <p>ENTIRE SHOES PURCHASE</p>
-            <p>SAVE UP TO $70</p>
-            <p>Click here see all the shoes collection...</p>
-          </a>
+          <div class="ad-bottom-text">
+            <p class="ad-bottom-text-item-1">Sport shoes collection</p>
+            <p class="ad-bottom-text-item-2">Entire shoes purchase</p>
+            <p class="ad-bottom-text-item-3">Save up to $70</p>
+            <a class="ad-bottom-text-item-4" href="#">Click here see all the shoes collection...</a>
+          </div>
         </div>
 
         <section class="about-mstore">
