Fixed bugs, changed class name 'wrapper'

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   
     <header>
       <div class="header-info">
-        <div class="wrapper-center header-center">
+        <div class="inner-center header-center">
           <div class="header-contacts">
             <p>(+84).898.058.000</p>
             <span>|</span>
@@ -33,7 +33,7 @@
       </div>
 
       <div class="main-user-nav">
-        <div class="wrapper-center header-center">
+        <div class="inner-center header-center">
           <div class="main-logo">
             <p>mstore</p>
     <!-- Через псевдоэлемент добвить точку для логотипа.-->
@@ -64,7 +64,7 @@
   
   <main>
       <div class="ad-top">
-        <div class="wrapper-center ad-center">
+        <div class="inner-center ad-center">
           <a href="#" class="ad-top-text">
             <p>We make it easy to exprience creativity</p>
             <p>Stylish<br> new<br> design.</p>
@@ -74,7 +74,7 @@
         </div>  
       </div>
     
-      <div class="wrapper-center">
+      <div class="inner-center">
         <section class="sopping-support-retum">
           <h2 class="visually-hidden">Important information on payment, delivery and return</h2>
           <ul class="sopping-support-retum-list">
@@ -97,7 +97,7 @@
           </ul>
         </section>
 
-        <section class="new-arrivals wrapper-center">
+        <section class="inner-center new-arrivals">
           <h2 class="visually-hidden">New arrivals</h2>
           <div class="new-arrival-left arrival-wrapper">
             <a class="link-to-item item-left" href="#">
@@ -134,7 +134,7 @@
           </div>
           <ul class="feauture-product-list">
             <li>
-              <div class="items item-1"s>
+              <div class="items item-1">
                 <div class="pop-up">
                   <button class="shopping-cart-card-btn" type="button">
                     <img src="img/Shopping_cart_btn.png" alt="shopping cart">
