Started the block We love Mstore

--- a/index.html
+++ b/index.html
@@ -297,13 +297,11 @@
           </div>
         </div>
 
-        <section class="about-mstore">
+        <section class="about-mstore inner">
           <div class="about-mstore-text">
-            <h2>We love mstore.</h2>
+            <h2 class="about-mstore-title">We love mstore.</h2>
             <p>A professional-looking tote for your everyday needs! This Wilsons Leather tote has a canvas look with genuine leather trim and a structured silhouette. Its shiny gold-tone hardware and two-tone design give it extra fashionable flair. </p>
             <a href="#">Discover</a>
-          </div>
-          <div class="about-mstore-photo">
           </div>
         </section>
 
