//rus// Сделан блок WE LOVE MSTORE. Появился баг класса open-more.

--- a/index.html
+++ b/index.html
@@ -298,10 +298,10 @@
         </div>
 
         <section class="about-mstore inner">
-          <div class="about-mstore-text">
+          <div class="about-mstore-block">
             <h2 class="about-mstore-title">We love mstore.</h2>
-            <p>A professional-looking tote for your everyday needs! This Wilsons Leather tote has a canvas look with genuine leather trim and a structured silhouette. Its shiny gold-tone hardware and two-tone design give it extra fashionable flair. </p>
-            <a href="#">Discover</a>
+            <p class="about-mstore-text">A professional-looking tote for your everyday needs! This Wilsons Leather tote has a canvas look with genuine leather trim and a structured silhouette. Its shiny gold-tone hardware and two-tone design give it extra fashionable flair. </p>
+            <a class="open-more" href="#">Discover</a>
           </div>
         </section>
 
