Сделан блок Best Sellers

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             <h2 class="block-title"><span class="underline">Feau</span>ture Product</h2>
             <a href="#"><span class="small-title">All Product</span></a>
           </div>
-          <ul class="feauture-product-list">
+          <ul class="product-list">
             <li>
               <div class="items item-1">
                 <div class="pop-up">
@@ -153,7 +153,7 @@
               </div>
             </li>
             <li>
-              <div class="items item-2">
+              <div class="items item-2 item-hot">
                 <div class="pop-up">
                   <button class="shopping-cart-card-btn" type="button">
                     <img src="img/Shopping_cart_btn.png" alt="shopping cart">
@@ -191,7 +191,7 @@
               </div>
             </li>
             <li>
-              <div class="items item-4">
+              <div class="items item-4 item-new">
                 <div class="pop-up">
                   <button class="shopping-cart-card-btn" type="button">
                     <img src="img/Shopping_cart_btn.png" alt="shopping cart">
@@ -210,7 +210,7 @@
               </div>
             </li>
             <li>
-              <div class="items item-5">
+              <div class="items item-5 item-sale">
                 <div class="pop-up">
                   <button class="shopping-cart-card-btn" type="button">
                     <img src="img/Shopping_cart_btn.png" alt="shopping cart">
@@ -305,47 +305,90 @@
           </div>
         </section>
 
-        <div class="">
+        <div class="best-sellers-wrapper">
          <section class="best-sellers">
-          <h2 class="block-title">Best Sellers Product</h2>
-          <ul class="best-sellers-list">
+          <div class="block-for-title">
+            <h2 class="block-title"><span class="underline">Best</span> Sellers Product</h2>
+            <a href="#"><span class="small-title">All Product</span></a>
+          </div>
+           <ul class="product-list">
             <li>
-              <a href="#">
-                <h3 class="product-name">Leather Sneakers</h3>
-                <p class="product-price">$80.00</p>
-              </a>
+              <div class="items item-8">
+                <div class="pop-up">
+                  <button class="shopping-cart-card-btn" type="button">
+                    <img src="img/Shopping_cart_btn.png" alt="shopping cart">
+                  </button>
+                  <button class="wishlist-card-btn" type="button">
+                    <img src="img/wishlist_btn.png" alt="wishlist">
+                  </button>
+                  <button class="zoom-card-btn" type="button">
+                    <img src="img/zoom-btn.png" alt="zoom photo">
+                  </button>
+                </div>
+                <a class="poduct-link" href="#8">
+                  <h3 class="product-name">Leather Sneakers</h3>
+                  <p class="product-price">$80.00</p>
+                </a>
+              </div>
             </li>
             <li>
-              <a href="#">
-                <h3 class="product-name">Hollister Backyard Sweatshirt</h3>
-                <p class="product-price">$29.00</p>
-              </a>
+              <div class="items item-2">
+                <div class="pop-up">
+                  <button class="shopping-cart-card-btn" type="button">
+                    <img src="img/Shopping_cart_btn.png" alt="shopping cart">
+                  </button>
+                  <button class="wishlist-card-btn" type="button">
+                    <img src="img/wishlist_btn.png" alt="wishlist">
+                  </button>
+                  <button class="zoom-card-btn" type="button">
+                    <img src="img/zoom-btn.png" alt="zoom photo">
+                  </button>
+                </div>
+                <a href="#2">
+                  <h3 class="product-name">Hollister Backyard Sweatshirt</h3>
+                  <p class="product-price">$29.00</p>
+                </a>
+              </div>
             </li>
             <li>
-              <a href="#">
-                <h3 class="product-name">Oslo Trek Hoodie</h3>
-                <p class="product-price">$29.00</p>
-              </a>
+              <div class="items item-3">
+                <div class="pop-up">
+                  <button class="shopping-cart-card-btn" type="button">
+                    <img src="img/Shopping_cart_btn.png" alt="shopping cart">
+                  </button>
+                  <button class="wishlist-card-btn" type="button">
+                    <img src="img/wishlist_btn.png" alt="wishlist">
+                  </button>
+                  <button class="zoom-card-btn" type="button">
+                    <img src="img/zoom-btn.png" alt="zoom photo">
+                  </button>
+                </div>
+                <a href="#3">
+                  <h3 class="product-name">Oslo Trek Hoodie</h3>
+                  <p class="product-price">$29.00</p>
+                </a>
+              </div>
             </li>
           </ul>
         </section>
 
-        <aside class="sale">
-          <a href="">
-            <h2>Summer sale</h2>
-            <p>20%</p>
-            <p>Discover now</p>
-          </a>        
+        <aside class="sale-sidebar">
+          <h2 class="sale-sidebar-title">Summer sale</h2>
+          <p class="sale-sidebar-text">20%</p>
+          <a class="sale-sidebar-link" href="">Discover now</a>        
         </aside>
        </div>
 
       <section class="blog">
-        <h2 class="block-title">Blog Post’s</h2>
-        <ul>
-          <li></li>
-          <li></li>
-          <li></li>
-        </ul>
+          <div class="block-for-title">
+            <h2 class="block-title"><span class="underline">Block</span> Post's</h2>
+          </div>        
+        <article class="blog-post blog-post-1">
+        </article>
+        <article class="blog-post blog-post-2">
+        </article>
+        <article class="blog-post blog-post-3">
+        </article>
       </section>
     </div>
     <section class="email-subscription">
