--- a/index.html
+++ b/index.html
@@ -382,22 +382,58 @@
       <section class="blog">
           <div class="block-for-title">
             <h2 class="block-title"><span class="underline">Block</span> Post's</h2>
-          </div>        
-        <article class="blog-post blog-post-1">
-        </article>
-        <article class="blog-post blog-post-2">
-        </article>
-        <article class="blog-post blog-post-3">
-        </article>
+          </div>   
+        <div class="blog-wrapper">
+          <article class="blog-post blog-post-1">
+            <img class="blog-post-1-img" src="img/BlogPost1.jpg" alt="Lorem Ipsum Dolor Sitamet"> 
+            <div class="blog-post-wrapper">
+              <h1 class="blog-post-title">Lorem Ipsum Dolor Sitamet</h1>
+              <div class=blog-post-info>
+                <p class=blog-post-date>Feb - 23</p>
+                <p class=blog-post-comment>2 comment</p>
+              </div>
+              <p class="blog-post-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,...</p>
+              <a class="open-more" href="#">Read more</a>
+            </div>
+          </article>
+          <article class="blog-post blog-post-2">
+            <img class="blog-post-1-img" src="img/BlogPost2.jpg" alt="Lorem Ipsum Dolor Sitamet">
+            <div class="blog-post-wrapper">
+              <h1 class="blog-post-title">Lorem Ipsum Dolor Sitamet</h1>
+               <div class=blog-post-info>
+                <p class=blog-post-date>Feb - 23</p>
+                <p class=blog-post-comment>0 comment</p>
+              </div>
+              <p class="blog-post-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,...</p>
+              <a class="open-more" href="#">Read more</a>
+            </div>
+          </article>
+          <article class="blog-post blog-post-3">
+            <img class="blog-post-1-img" src="img/BlogPost3.jpg" alt="Lorem Ipsum Dolor Sitamet">
+            <div class="blog-post-wrapper">
+              <h1 class="blog-post-title">Lorem Ipsum Dolor Sitamet</h1>
+               <div class=blog-post-info>
+                <p class=blog-post-date>Feb - 23</p>
+                <p class=blog-post-comment>2 comment</p>
+              </div>
+              <p class="blog-post-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,...</p>
+              <a class="open-more" href="#">Read more</a>
+            </div>
+          </article>
+        </div>  
       </section>
     </div>
     <section class="email-subscription">
-      <h2>Join our Email</h2>
-      <p>We only send emails once a month and only about good things</p>
-      <form method="post">
-        <input type="text" name="email">
-        <input type="submit" value="submit">
-      </form>
+      <div class="email-subscription-wrapper">
+        <div class="email-subscription-text">
+          <h3 class="email-subscription-email">Join our Email</h3>
+          <p class="email-subscription-info">We only send emails once a month and only about good things</p>
+        </div>
+        <form class="email-subscription-subscription" method="post">
+          <input class="email-subscription-form" type="text" name="email">
+          <input class="email-subscription-buttom" type="submit" value="submit">
+        </form>
+      </div>
     </section>
   </main>
   
