Bug fix main navigation

--- a/index.html
+++ b/index.html
@@ -34,10 +34,7 @@
 
       <div class="main-user-nav">
         <div class="inner-center header-center">
-          <div class="main-logo">
-            <p>mstore</p>
-    <!-- Через псевдоэлемент добвить точку для логотипа.-->
-          </div>
+          <p class="main-logo">mstore</p>
           <nav class="header-nav">
             <ul class="header-nav-list">
               <li><a href="#">Home</a></li>
@@ -430,7 +427,7 @@
           <p class="email-subscription-info">We only send emails once a month and only about good things</p>
         </div>
         <form class="email-subscription-subscription" method="post">
-          <input class="email-subscription-form" type="text" name="email">
+          <input class="email-subscription-form" type="email" name="email" placeholder="Your email...">
           <input class="email-subscription-buttom" type="submit" value="submit">
         </form>
       </div>
