--- a/index.html
+++ b/index.html
@@ -435,7 +435,30 @@
   </main>
   
   <footer>
-    <div>w370</div>
-    <div>w770</div>
+    <div class="footer-wrapper">
+      <div class="inner-center">
+        <section class="footer-about">
+          <p class="footer-about-logo main-logo">
+            mstore
+          </p>
+          <p class="footer-about-text">
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+          </p>
+          <ul class="footer-about-contacts">
+            <li>Adress: Hanoi, Vietnamese.</li>
+            <li>Phone: (+084) 898.058.000</li>
+            <li>Mail: min101092@gmail.com</li>
+          </ul>
+          <ul class="footer-about-social">
+            <li><a href="#fb"><img src="img/Facebook.png" alt="Facebook"></a></li>
+            <li><a href="#tw"><img src="img/Twitter.png" alt="Twitter"></a></li>
+            <li><a href="#inst"><img src="img/Instagram.png" alt="Instagram"></a></li>
+            <li><a href="#yt"><img src="img/Youtube.png" alt="Youtube"></a></li>
+            <li><a href="#g+"><img src="img/Google.png" alt="Google+"></a></li>
+            <li><a href="#be"><img src="img/Behance.png" alt="Behance"></a></li>
+          </ul>
+        </section>
+      </div>
+    </div>
   </footer>
 </body>
