--- a/index.html
+++ b/index.html
@@ -436,18 +436,18 @@
   
   <footer>
     <div class="footer-wrapper">
-      <div class="inner-center">
+      <div class="inner-center foooter-inner">
         <section class="footer-about">
           <p class="footer-about-logo main-logo">
             mstore
           </p>
           <p class="footer-about-text">
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+            Lorem Ipsum is simply dummy text of the print- ing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
           </p>
           <ul class="footer-about-contacts">
-            <li>Adress: Hanoi, Vietnamese.</li>
-            <li>Phone: (+084) 898.058.000</li>
-            <li>Mail: min101092@gmail.com</li>
+            <li>Adress: <span class="footer-about-contacts-white">Hanoi, Vietnamese.</span></li>
+            <li>Phone: <span class="footer-about-contacts-white">(+084) 898.058.000</span></li>
+            <li>Mail: <span class="footer-about-contacts-white">min101092@gmail.com</span></li>
           </ul>
           <ul class="footer-about-social">
             <li><a href="#fb"><img src="img/Facebook.png" alt="Facebook"></a></li>
@@ -457,6 +457,24 @@
             <li><a href="#g+"><img src="img/Google.png" alt="Google+"></a></li>
             <li><a href="#be"><img src="img/Behance.png" alt="Behance"></a></li>
           </ul>
+        </section>
+        <section class="footer-informations">
+          <h3 class="footer-information-headline">Informations</h3>
+          <div class="footer-information-main">
+            <ul class="footer-information-list">
+              <li><a href="#0">Privacy</a></li>
+              <li><a href="#01">Terms of Use</a></li>
+              <li><a href="#02">Copyright</a></li>
+              <li><a href="#03">Find Your Country</a></li>
+              <li><a href="#04">Site map</a></li>
+              <li><a href="#05">Odering info</a></li>
+              <li><a href="#06">Contatcs</a></li>
+              <li><a href="#07">Return info</a></li>
+              <li><a href="#08">Warranty</a></li>
+              <li><a href="#09">Product Manual</a></li>
+            </ul>
+            <img class="footer-information-map" src="img/Maps.jpg">
+          </div>
         </section>
       </div>
     </div>
