--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 </head>
 <body>
   
-    <header>
-      <div class="header-info">
-        <div class="inner-center header-center">
-          <div class="header-contacts">
+    <header class="page-header">
+      <div class="page-header__info">
+        <div class="inner-center  page-header--center">
+          <div class="page-header__contacts">
             <p>(+84).898.058.000</p>
             <span>|</span>
             <p>min101092@gmail.com</p>
           </div>
-          <div class="header-choice">
+          <div class="page-header__choice">
             <label for="language-choice">language:</label>
             <select name="language" id="language-choice">
               <option selected>ENG</option>
@@ -32,26 +32,26 @@
         </div>
       </div>
 
-      <div class="main-user-nav">
-        <div class="inner-center header-center">
-          <p class="main-logo">mstore</p>
+      <div class="page-header__menu">
+        <div class="inner-center page-header--center">
+          <p class="main-logo">mstore<span>.</span></p>
           <nav class="header-nav">
-            <ul class="header-nav-list">
-              <li><a href="#">Home</a></li>
-              <li><a href="#">Men</a></li>
-              <li><a href="#">Women</a></li>      
-              <li><a href="#">Accessories</a></li> 
-              <li><a href="#">Lookbook</a></li> 
-              <li><a href="#">Contact</a></li> 
+            <ul class="header-nav__list">
+              <li class="header-nav__item"><a href="#">Home</a></li>
+              <li class="header-nav__item"><a href="#">Men</a></li>
+              <li class="header-nav__item"><a href="#">Women</a></li>      
+              <li class="header-nav__item"><a href="#">Accessories</a></li> 
+              <li class="header-nav__item"><a href="#">Lookbook</a></li> 
+              <li class="header-nav__item"><a href="#">Contact</a></li> 
             </ul>
           </nav>
 
           <div class="user-menu">
-            <ul class="user-menu-list">
-              <li class="search"><a href="#"><img src="img/Search.png" alt="search"></a></li>
-              <li class="account"><a href="#"><img src="img/User.png" alt="your account"></a></li>
-              <li class="wishlist"><a href="#"><img src="img/Wishlist.png" alt="wishlist"></a></li>
-              <li class="shopping-cart"><a href="#"><img src="img/Shopping_cart.png" alt="shopping cart"></a></li>
+            <ul class="user-menu__list">
+              <li class="user-menu__item  user-menu__search"><a href="#"><img src="img/Search.png" alt="search"></a></li>
+              <li class="user-menu__item  user-menu__account"><a href="#"><img src="img/User.png" alt="your account"></a></li>
+              <li class="user-menu__item  user-menu__wishlist"><a href="#"><img src="img/Wishlist.png" alt="wishlist"></a></li>
+              <li class="user-menu__item  user-menu__shopping-cart"><a href="#"><img src="img/Shopping_cart.png" alt="shopping cart"></a></li>
               <li>$0.00</li>
             </ul>
           </div>
@@ -61,73 +61,73 @@
   
   <main>
       <div class="ad-top">
-        <div class="inner-center ad-center">
-          <a href="#" class="ad-top-text">
-            <p>We make it easy to exprience creativity</p>
-            <p>Stylish<br> new<br> design.</p>
-            <p>Order online and have your products delivered to your closest store for free...</p>
-            <p class="open-more">Shopping now</p> 
+        <div class="inner-center ad__inner--position">
+          <a href="#" class="ad-top__inner">
+            <p class="ad-top__text  ad-top__text--style-1">We make it easy to exprience creativity</p>
+            <p class="ad-top__text  ad-top__text--style-2">Stylish<br> new<br> design.</p>
+            <p class="ad-top__text  ad-top__text--style-3">Order online and have your products delivered to your closest store for free...</p>
+            <a href="#" class="open-more">Shopping now</a>
           </a>
         </div>  
       </div>
     
       <div class="inner-center">
-        <section class="sopping-support-retum">
+        <section class="main-info">
           <h2 class="visually-hidden">Important information on payment, delivery and return</h2>
-          <ul class="sopping-support-retum-list">
-            <li class="shipping advantage">
+          <ul class="main-info__list">
+            <li class="main-info__shipping">
               <h3>FREE SHIPPING</h3>
-              <p>Free shipping for all US order</p>
+              <p class="main-info__advantage--font-style">Free shipping for all US order</p>
             </li>
-            <li class="support advantage">
+            <li class="main-info__support">
               <h3>SUPPORT 24/7</h3>
-              <p>We support 24 hours a day</p>
+              <p class="main-info__advantage--font-style">We support 24 hours a day</p>
             </li>
-            <li class="return advantage">
+            <li class="main-info__return">
               <h3>30 Day Return</h3>
-              <p>You have 30 days to return</p>
+              <p class="main-info__advantage--font-style">You have 30 days to return</p>
             </li>
-            <li class="payment advantage">
+            <li class="main-info__payment">
               <h3>Payment 100% secured</h3>
-              <p>Payment 100% secured</p>
+              <p class="main-info__advantage--font-style">Payment 100% secured</p>
             </li>
           </ul>
         </section>
 
-        <section class="inner-center new-arrivals">
+        <section class="inner-center  new-arrivals">
           <h2 class="visually-hidden">New arrivals</h2>
-          <div class="new-arrival-left arrival-wrapper">
-            <a class="link-to-item item-left" href="#">
-              <h3 class="new-arrivals-title">Shirt for boy's</h3>
-              <p class="arrivals red">New arrivals</p>
-              <p class="price red">$99.00</p>
-              <p class="short-description right">Refresh your wardrobe with a<br> piece from our gorgeous ready-to-wear collection, featuring beautifully crafted coats, dresses, jackets, sweaters, skirts, tops and trousers.<br> Whether you’re searching for a special occasion...</p>
+          <div class="new-arrival--left  arrival__wrapper">
+            <a href="#" class="new-arrival__link  new-arrival__item--left">
+              <h3 class="new-arrivals__title">Shirt for boy's</h3>
+              <p class="new-arrivals__arrival  new-arrivals__item--red">New arrivals</p>
+              <p class="new-arrivals__price  new-arrivals__item--red">$99.00</p>
+              <p class="new-arrivals__short-description  new-arrivals__item--right">Refresh your wardrobe with a<br> piece from our gorgeous ready-to-wear collection, featuring beautifully crafted coats, dresses, jackets, sweaters, skirts, tops and trousers.<br> Whether you’re searching for a special occasion...</p>
               <p class="open-more">Shopping now</p>
             </a>
           </div>
-          <div class="new-arrival-right arrival-wrapper">
-            <a class="link-to-item item-right" href="#">
-              <h3 class="new-arrivals-title">Shirt for girl's</h3>
-              <p class="arrivals blue">New arrivals</p>
-              <p class="price blue">$99.00</p>
-              <p class="short-description">Refresh your wardrobe with a piece from our gorgeous ready-to-wear collection, featuring beautifully crafted coats, dresses, jackets, sweaters, skirts, tops and trousers. Whether you’re searching for a special occasion...</p>
+          <div class="new-arrival--right  arrival__wrapper">
+            <a class="new-arrival__link new-arrival__item--right" href="#">
+              <h3 class="new-arrivals__title">Shirt for girl's</h3>
+              <p class="new-arrivals__arrival  new-arrivals__item--blue">New arrivals</p>
+              <p class="new-arrivals__price  new-arrivals__item--blue">$99.00</p>
+              <p class="new-arrivals__short-description">Refresh your wardrobe with a piece from our gorgeous ready-to-wear collection, featuring beautifully crafted coats, dresses, jackets, sweaters, skirts, tops and trousers. Whether you’re searching for a special occasion...</p>
               <p class="open-more">Shopping now</p>
             </a>
           </div>
-          <div class="shoes-collection">
-            <a class="shoes-collection-link" href="#">
-              <h3 class="shoes-collection-title">Shoes collection</h3>
-              <p>new item's</p>
-              <p>We are delighted to reveal our campaign for the Autumn/Winter 2017 collection, styled by<br> fashion icon Caroline Issa and shot by esteemed photographer www.minsoi.com...</p>
+          <div class="new-arrivals__shoes-collection">
+            <a class="new-arrivals__shoes-collection-link" href="#">
+              <h3 class="shoes-collection__title">Shoes collection</h3>
+              <p class="shoes-collection__text  shoes-collection__text--style-1">new item's</p>
+              <p class="shoes-collection__text  shoes-collection__text--style-2">We are delighted to reveal our campaign for the Autumn/Winter 2017 collection, styled by<br> fashion icon Caroline Issa and shot by esteemed photographer www.minsoi.com...</p>
               <p class="open-more">Shopping now</p>
             </a>
           </div>
         </section>
 
         <section class="feauture-product">
-          <div class="block-for-title">
-            <h2 class="block-title"><span class="underline">Feau</span>ture Product</h2>
-            <a href="#"><span class="small-title">All Product</span></a>
+          <div class="main-title title-wrapper">
+            <h2 class="main-title__block-title"><span class="main-title__block-title--underline">Feau</span>ture Product</h2>
+            <a href="#"><span class="main-title__block-title--small-title">All Product</span></a>
           </div>
           <ul class="product-list">
             <li>
@@ -304,9 +304,9 @@
 
         <div class="best-sellers-wrapper">
          <section class="best-sellers">
-          <div class="block-for-title">
-            <h2 class="block-title"><span class="underline">Best</span> Sellers Product</h2>
-            <a href="#"><span class="small-title">All Product</span></a>
+          <div class="main-title title-wrapper">
+            <h2 class="main-title__block-title"><span class="main-title__block-title--underline">Best</span> Sellers Product</h2>
+            <a href="#"><span class="main-title__block-title--small-title">All Product</span></a>
           </div>
            <ul class="product-list">
             <li>
@@ -375,10 +375,10 @@
           <a class="sale-sidebar-link" href="">Discover now</a>        
         </aside>
        </div>
-
+        
       <section class="blog">
-          <div class="block-for-title">
-            <h2 class="block-title"><span class="underline">Block</span> Post's</h2>
+          <div class="main-title title-wrapper">
+            <h2 class="main-title__block-title"><span class="main-title__block-title--underline">Block</span> Post's</h2>
           </div>   
         <div class="blog-wrapper">
           <article class="blog-post blog-post-1">
@@ -434,12 +434,12 @@
     </section>
   </main>
   
-  <footer>
+  <footer class="footer-page">
     <div class="footer-wrapper">
-      <div class="inner-center foooter-inner">
+      <div class="inner-center footer-page__inner">
         <section class="footer-about">
           <p class="footer-about-logo main-logo">
-            mstore
+            mstore<span>.</span>
           </p>
           <p class="footer-about-text">
             Lorem Ipsum is simply dummy text of the print- ing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
